Hacking at remote debug